--- a/concesionario/src/main/webapp/WEB-INF/vistas/prueba.html
+++ b/concesionario/src/main/webapp/WEB-INF/vistas/prueba.html
@@ -1,9 +1,11 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-	pageEncoding="UTF-8"%>
-
-<%@ include file="/WEB-INF/vistas/includes/cabecera.jsp" %>
-
-<form  action ="agregar" method="post">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{_plantilla :: estructura(~{::body})}" lang="es">
+<head>
+<title>Principal</title>
+</head>
+<body>
+	<form  action ="agregar" method="post">
  	<h2>Alta</h2>
  	
  	<div class="form-row">	
@@ -33,8 +35,8 @@
   	<div class="form-row">
 
     	<div class="form-group col-md-2">
-      		<label for="matricula">MatrÃ­cula</label>
-      		<input type="text" class="form-control" id="matricula" name="matricula" required title="La matricula es obligatoria">
+      		<label for="matricula">Matrícula</label>
+      		<input type="text" class="form-control" id="matricula" name="matricula" required pattern="[a-z]+" title="Las calorias deben ser un numero entero">
     	</div>
   	</div>
 
@@ -47,6 +49,13 @@
 	</div>
 	
 </form>
-  
- 
-<%@ include file="/WEB-INF/vistas/includes/pie.jsp" %>
+
+</body>
+</html>
+
+
+
+
+
+
+
